# DnsQuesryTool

./: CMakeLists.txt  README.md
src/: DnsResolver.cpp  DnsResolver.h  main.cpp
